[package]
name = "crochet"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "An exploration into reactive UI"
repository = "https://github.com/linebender/druid"
categories = ["gui"]
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["async-std"]

[dependencies.druid]
git = "https://github.com/linebender/druid"
rev = "aac8103ed68d6654f2e1f6d360b1e6cb7993e787"
features = ["crochet"]

[dependencies]
log = "0.4.11"

async-std = { version = "1.6.4", optional = true }
futures = "0.3.5"

[[example]]
name = "async"
required-features = ["async-std"]
