[package]
name = "crochet"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "An exploration into reactive UI"
repository = "https://github.com/linebender/druid"
categories = ["gui"]
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["async-std"]

[dependencies.druid]
git = "https://github.com/linebender/druid"
rev = "6fd8ff9c6dd4f8c628347ca7eda4f5d762ae3001"
features = ["crochet"]

[dependencies]
log = "0.4.11"
crochet-macros = { path = "crochet-macros" }
async-std = { version = "1.6.4", optional = true }
futures = "0.3.5"

[[example]]
name = "async"
required-features = ["async-std"]
